# demo-20230418

./: .cruft.json  .gitignore  .pre-commit-config.yaml  Justfile  README.md  default.tsl  pyproject.toml
.github/workflows/: boost.yml
data/: gojira_-_flying_whales.tsl
katana_tsl_parser/: main.py  models.py
tests/samples/: SneakyAmpsBlank.tsl  defaults.tsl
tests/unit/: test_models.py
