[tool.poetry]
name = "katana-tsl-parser"
version = "0.1.0"
description = "'Parse Katana TSL files'"
authors = ["Mathieu Lemay <acidrain1@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ["katana_tsl_parser/py.typed"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
mypy = "^1.0.0"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
namespace_packages=true
explicit_package_bases=true
strict=true
show_error_codes=true
plugins=[
    "pydantic.mypy",
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
select = [
    "A",  # flake8-builtins
    "B",  # flake8-bugbear
    "BLE",  # flake8-blind-except
    "C4",  # flake8-comprehensions
    "C90",  # mccabe
    "E",  # pycodestyle
    "ERA",  # flake8-eradicate
    "F",  # Pyflakes
    "G",  # flake8-logging-format
    "I",  # flake8-isort
    "N",  # pep8-naming
    "PT",  # flake8-pytest-style
    "RUF",  # ruff
    "S",  # flake8-bandit
    "W",  # pycodestyle,
]

[tool.ruff.pep8-naming]
classmethod-decorators = [
    "classmethod",
    "validator",
    "root_validator",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]  # Use of `assert` detected
"tests/unit/test_models.py" = ["E501"]  # Line too long
